# ProxyAuthK8S

./: .containerignore  .env  .env.production  .gitignore  .prettierignore  .spectral.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  Taskfile.yaml  cog.toml  compose.recette.yaml  compose.yaml  devfile.yaml  eslint.config.mjs  kubeconfig-template.oidc.yaml  mise.toml  nx.json  openapi-ts.config.ts  package-lock.json  package.json  pr_body.md  swagger.json  tsconfig.base.json
.compose/: compose.authelia.yaml  compose.headlamp.yaml  compose.openobserve.yaml  compose.otel.yaml  compose.redis.yaml  compose.traefik.yaml
.compose/authelia/: .gitignore  che-configuration.yml  configuration.yml  users_database.yml
.compose/traefik/: certificates.yml
.docs/: README.md  Readme.md  next.config.mjs  package.json  source.config.ts  swagger.json
.docs/assets/: banner.art
.docs/lib/: remark-variables.mjs
.docs/scripts/: add-frontmatter.sh  generate-docs.ts
.docs/src/: mdx-components.tsx
.github/: dependabot.yaml  release_template.md
.github/scripts/: check-workspace-deps.py
.hooks/: end-of-line.sh  whitespace-fixer.sh
.k3d/: .gitignore  k3d.cluster.yaml  k3d.cluster.yaml.tpl
.talos/: .gitignore  patch_auth.yaml  patch_auth.yaml.tpl  patch_host.yaml.tpl
.taskfile/: gen.yaml  kube3d.yaml  lab.yaml  lint.yaml  talos.yaml  tmux.yaml  tool.yaml
apps/crdgen/: CHANGELOG.md  Cargo.toml  project.json
apps/crdgen/src/: main.rs
apps/kubectl_proxyauth/: CHANGELOG.md  Cargo.toml  project.json  readme.md
apps/kubectl_proxyauth/src/: ctx.rs  error.rs  main.rs
apps/kubectl_proxyauth/src/cli_config/: cli_cluster_config.rs  cli_server_config.rs  error.rs  mod.rs
apps/kubectl_proxyauth/src/config/: clear.rs  get.rs  get_output.rs  mod.rs
apps/kubectl_proxyauth/src/context/: mod.rs  output.rs
apps/server/: CHANGELOG.md  Cargo.toml  project.json
apps/server/src/: banner.art  main.rs
changelog/: CHANGELOG-v0.1.0.md  RELEASE-GUIDE-v0.1.0.md
commit-report/: commit_report.md
deploy/: crds.yaml
docker-security-report/: docker_security_report.md
helm-packages/: chart-0.1.0.tgz  chart-crd-0.1.0.tgz
helm-report/: helm_report.md
libs/api/: Cargo.toml  readme.md
libs/api/src/: api_doc.rs  base.rs  lib.rs
libs/api/src/api/: get_all_visible_cluster.rs  get_all_visible_cluster_model.rs  mod.rs
libs/api/src/cluster/: base.rs  mod.rs
libs/api/src/cluster/auth/: auth_model.rs  callback.rs  callback_model.rs  login.rs
libs/api/src/cluster/redirect/: kube_redirect.rs  mod.rs  redirect.rs
libs/api/src/model/: mod.rs  user.rs  user_claim.rs
libs/cli/cli/: CHANGELOG.md  Cargo.toml  project.json
libs/cli/cli/src/: ctx.rs  error.rs  lib.rs
libs/cli/cli/src/cli_config/: cli_server_config.rs  mod.rs
libs/cli/cli/src/config/: mod.rs  set_def.rs
libs/cli/cli/src/context/: output.rs
libs/cli/cli/src/get/: mod.rs
libs/cli/cli/src/login/: get_token.rs  mod.rs
libs/cli/cli_trace/: CHANGELOG.md  Cargo.toml  project.json
libs/cli/cli_trace/src/: level.rs  lib.rs
libs/cli/client_api/: CHANGELOG.md  Cargo.toml  README.md  project.json
libs/cli/client_api/docs/: ApiClustersApi.md  AuthClustersApi.md  HealthApi.md  ProxyClustersApi.md
libs/cli/client_api/src/apis/: api_clusters_api.rs  auth_clusters_api.rs  configuration.rs  health_api.rs  mod.rs  proxy_clusters_api.rs
libs/cli/client_api/src/models/: callback_model.rs  get_all_visible_cluster_body.rs  mod.rs  visible_cluster.rs
libs/cli_trace/: Cargo.toml  project.json
libs/client_api/: .gitignore  .openapi-generator-ignore  Cargo.toml  README.md  project.json
libs/client_api/docs/: ApiClustersApi.md  CallbackModel.md  GetAllVisibleClusterBody.md  ProxyClustersApi.md  VisibleCluster.md
libs/client_api/src/apis/: api_clusters_api.rs  auth_clusters_api.rs  mod.rs
libs/client_api/src/models/: callback_model.rs  get_all_visible_cluster_body.rs
libs/common/: Cargo.toml  project.json
libs/common/src/: lib.rs  oidc_conf.rs
libs/controller/: Cargo.toml  project.json
libs/controller/src/: ctx.rs  error.rs  lib.rs
libs/controller/src/proxy_kube_api/: cleanup.rs  mod.rs  reconcile.rs
libs/server/api/: CHANGELOG.md  Cargo.toml  project.json  readme.md
libs/server/api/src/: api_doc.rs  base.rs  lib.rs
libs/server/api/src/api/: get_all_visible_cluster.rs  get_all_visible_cluster_model.rs  mod.rs
libs/server/api/src/cluster/auth/: callback.rs  callback_model.rs  login.rs  mod.rs
libs/server/api/src/cluster/redirect/: kube_redirect.rs  mod.rs
libs/server/api/src/cluster/redirect/kube_redirect/: standard.rs  tls.rs  upgrade.rs
libs/server/api/src/helper/: mod.rs
libs/server/api/src/model/: user.rs
libs/server/common/: CHANGELOG.md  Cargo.toml  project.json
libs/server/common/src/: lib.rs  oidc_conf.rs  oidc_error.rs  traits.rs
libs/server/controller/: CHANGELOG.md  Cargo.toml  project.json  readme.md
libs/server/controller/src/: lib.rs
libs/server/controller/src/proxy_kube_api/: cleanup.rs  mod.rs  reconcile.rs
libs/server/crd/: CHANGELOG.md  Cargo.toml  project.json
libs/server/crd/src/: lib.rs
libs/server/crd/src/authentication_configuration/: jwt_authenticator.rs  mod.rs  oidc_provider.rs  validate_against.rs
libs/server/crd/src/certificate/: mod.rs
libs/server/crd/src/default/: mod.rs
libs/server/crd/src/security/: allowed_crd_configuration.rs  allowed_path_configuration.rs  allowed_path_configuration_enum.rs  fail2login_equal_ban_configuration.rs  mod.rs  namespaced_access_configuration.rs  namespaced_access_rule_kind.rs  per_user_group_rate_limiting_configuration.rs  rate_limiting_configuration.rs
libs/server/crd/src/service/: mod.rs
libs/server/crd/src/status/: mod.rs
libs/server/trace/: CHANGELOG.md  Cargo.toml  project.json
libs/server/trace/src/: lib.rs
libs/trace/: Cargo.toml  project.json
libs/trace/src/: helper.rs  lib.rs
quality-report/: quality_report.md
sbom-reports/: front-sbom.json  front-sbom.txt  server-sbom.json  server-sbom.txt
security-report/: security_report.md
swagger-report/: swagger_report.md
(+127 files in other folders)
