
[workspace]
resolver = '2'
members = [
	'libs/crd',
	'apps/server',
	'libs/trace',
	'apps/crdgen',
	'apps/swaggergen',
	'libs/api',
	'libs/controller',
	'libs/common',
]

[workspace.dependencies]
actix-web = '4'
tokio = { version = '1', features = ['macros', 'rt-multi-thread'] }
tokio-stream = '0.1'
anyhow = '1'
utoipa = { version = '5', features = ['actix_extras'] }
utoipa-actix-web = { version = '0.1' }
k8s-openapi = { version = '0', features = ['v1_34'] }
uuid = { version = '1', features = ['v4'] }
serde = { version = '1', features = ['derive'] }
serde_json = '1'
serde_yaml = '0.9'
tracing = { version = '0.1', features = ['std'] }
kube = { version = '2', features = ['derive', 'runtime', 'client'] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"] }
schemars = { version = '1' }
futures = '0.3'
futures-util = "0.3"
chrono = { version = '0.4', features = ['serde'] }
deadpool-redis = { version = "0.22.0", features = ["serde"] }
opentelemetry = { version = '0.30', features = ['trace', 'metrics', 'logs'] }
opentelemetry_sdk = { version = '0.30', features = [
	'trace',
	'metrics',
	'logs',
	'rt-tokio',
] }
opentelemetry-otlp = { version = '0.30', features = [
	'grpc-tonic',
	'trace',
	'metrics',
	'logs',
	'internal-logs',
] }
opentelemetry-appender-tracing = { version = '0.30' }
tracing-subscriber = { version = '0.3', features = [
	'env-filter',
	'registry',
	'std',
	'fmt',
] }
tracing-opentelemetry = { version = '0.31' }

[profile.release]
lto = true
