
[workspace]
resolver = '2'
members = [
  'libs/server/crd',
  'apps/server',
  'libs/server/trace',
  'apps/crdgen',
  'apps/swaggergen',
  'libs/server/api',
  'libs/server/controller',
  'libs/server/common',
  'apps/kubectl_proxyauth',
  'libs/cli/cli_trace',
  'libs/cli/client_api',
  'libs/cli/cli',
]

[workspace.dependencies]
actix-web = { version = '4', features = ['rustls-0_23'] }
tokio = { version = '1', features = ['macros', 'rt-multi-thread'] }
tokio-stream = '0.1'
anyhow = '1'
utoipa = { version = '5', features = ['actix_extras'] }
utoipa-actix-web = { version = '0.1' }
k8s-openapi = { version = '0', features = ['v1_34'] }
uuid = { version = '1', features = ['v4'] }
serde = { version = '1', features = ['derive'] }
serde_json = '1'
serde_yaml = '0.9'
tracing = { version = '0.1', features = ['std'] }
kube = { version = '3', features = ['derive', 'runtime', 'client'] }
reqwest = { version = '0.12', features = ['json', 'rustls-tls', 'stream'] }
schemars = { version = '1' }
futures = '0.3'
futures-util = '0.3'
chrono = { version = '0.4', features = ['serde'] }
deadpool-redis = { version = '0.22', features = ['serde'] }
opentelemetry = { version = '0.31', features = ['trace', 'metrics', 'logs'] }
opentelemetry_sdk = { version = '0.31', features = [
  'trace',
  'metrics',
  'rt-tokio',
] }
opentelemetry-otlp = { version = '0.31', features = [
  'grpc-tonic',
  'trace',
  'metrics',
  'internal-logs',
  'serialize',
] }
opentelemetry-appender-tracing = { version = '0.31' }
tracing-subscriber = { version = '0.3', features = [
  'env-filter',
  'registry',
  'std',
  'fmt',
] }
tracing-opentelemetry = { version = '0.32' }
rustls = { version = '0.23', features = ['ring'], default-features = false }
openidconnect = '4.0.1'
thiserror = { version = '2' }

[profile.release]
lto = true
