[package]
name = "crdgen"
version = "0.1.7"
edition = "2021"


[dependencies]
kube = { workspace = true }
crd = { path = "../../libs/server/crd" , version = "0.1.7" }
serde = { workspace = true }
serde_yaml = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
