[package]
name = "kubectl_proxyauth"
version = "0.1.0"
edition = "2021"


[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
tracing = { workspace = true }
tokio = { workspace = true }

cli_trace = { path = "../../libs/cli_trace" }
cli = { path = "../../libs/cli" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
