[package]
name = "kubectl_proxyauth"
version = "0.1.8"
edition = "2021"


[dependencies]
clap = { version = "4.5", features = ["derive"] }
tracing = { workspace = true }
tokio = { workspace = true }

cli_trace = { path = "../../libs/cli/cli_trace" , version = "0.1.8" }
cli = { path = "../../libs/cli/cli" , version = "0.1.8" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
