[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
utoipa = { workspace = true }
utoipa-actix-web = { workspace = true }
actix-web = { workspace = true }
tracing = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
