[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
utoipa = { workspace = true }
utoipa-actix-web = { workspace = true }
actix-web = { workspace = true }
tracing = { workspace = true }
deadpool-redis = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures-util = { workspace = true }
openidconnect = { workspace = true }

common = { path = "../common" }
crd = { path = "../crd" }


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
