[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
kube = { workspace = true }
deadpool-redis = { workspace = true }
tracing = { workspace = true }
rustls = { workspace = true }
openidconnect = { workspace = true }
serde = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
