[package]
name = "controller"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = { workspace = true }
chrono = { workspace = true }
kube = { workspace = true }
k8s-openapi = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
r2d2 = { workspace = true }
redis = { workspace = true }

thiserror = { version = "2" }

crd = { path = "../crd" }
common = { path = "../common" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
