[package]
name = "controller"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = { workspace = true }
chrono = { workspace = true }
kube = { workspace = true }
k8s-openapi = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
deadpool-redis = { workspace = true }
opentelemetry = { workspace = true }

thiserror = { workspace = true }

crd = { path = "../crd" }
common = { path = "../common" }
trace = { path = "../trace" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
