[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }

tracing = { workspace = true }
k8s-openapi = { workspace = true }
kube = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
keyring = { version = "3", features = [
  "linux-native",
  "apple-native",
  "windows-native",
  "sync-secret-service",
] }

cli_trace = { path = "../cli_trace" }
client_api = { path = "../client_api" }
comfy-table = "7.2.1"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
