[package]
name = "cli"
version = "0.1.9"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }

tracing = { workspace = true }
kube = { workspace = true }
k8s-openapi = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
keyring = { version = "3", features = [
  "linux-native",
  "apple-native",
  "windows-native",
  "sync-secret-service",
] }

cli_trace = { path = "../cli_trace", version = "0.1.9" }
client_api = { path = "../client_api", version = "0.1.9" }
comfy-table = "7.2"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.cargo-machete]
ignored = ["k8s-openapi"]
