[package]
name = "client_api"
version = "0.1.9"
authors = ["maxleriche.60@gmail.com"]
description = "Reverse Proxy K8s Api."
license = "MIT"
edition = "2021"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_with = { version = "^3.8", default-features = false, features = [
  "base64",
  "std",
  "macros",
] }
serde_json = { workspace = true }
serde_repr = "^0.1"
url = "^2.5"
reqwest = { workspace = true, features = [
  "json",
  "multipart",
  "query",
  "form",
] }

[features]
default = ["native-tls"]
native-tls = ["reqwest/native-tls"]
rustls = ["reqwest/rustls"]
