[package]
name = "api"
version = "0.1.9"
edition = "2021"

[dependencies]
utoipa = { workspace = true }
utoipa-actix-web = { workspace = true }
kube = { workspace = true }
k8s-openapi = { workspace = true }
actix-web = { workspace = true }
tracing = { workspace = true }
deadpool-redis = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures-util = { workspace = true }
openidconnect = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }

common = { path = "../common" , version = "0.1.9" }
crd = { path = "../crd" , version = "0.1.9" }


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
