[package]
name = "controller"
version = "0.1.9"
edition = "2021"

[dependencies]
tracing = { workspace = true }
kube = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
k8s-openapi = { workspace = true }
tokio = { workspace = true }
deadpool-redis = { workspace = true }
opentelemetry = { workspace = true }
thiserror = { workspace = true }

kube-leader-election = "0.43.0"

crd = { path = "../crd", version = "0.1.9" }
common = { path = "../common", version = "0.1.9" }
trace = { path = "../trace", version = "0.1.9" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package.metadata.cargo-machete]
ignored = ["k8s-openapi"]
