[package]
name = "crd"
version = "0.1.0"
edition = "2021"

[dependencies]
k8s-openapi = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }
kube = { workspace = true }
schemars = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
openidconnect = { workspace = true }

base64 = "0.22"

common = { path = "../common" }
secrecy = "0.10.3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
