[package]
name = "trace"
version = "0.1.9"
edition = "2021"

[dependencies]
tracing = { workspace = true }

opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-opentelemetry = { workspace = true }

[features]
default = ["otel", "metrics"]
log = []
metrics = []
otel = []
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
